updated more tests with allure